// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTable renders 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    />
  </div>
</div>
`;

exports[`ClayTable renders a Cell delimited 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="table-cell-start"
          >
            Start
          </th>
          <th
            class=""
          >
            <button
              type="button"
            >
              Dummy
            </button>
          </th>
          <th
            class=""
          >
            <button
              type="button"
            >
              Dummy
            </button>
          </th>
          <th
            class="table-cell-end"
          >
            End
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a Cell with text alignment set to center 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
    >
      <thead>
        <tr
          class=""
        >
          <th
            class="text-center"
          >
            <a
              href="#1"
            >
              Link
            </a>
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a full bottom vertical aligned table 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list thead-valign-bottom table-valign-bottom"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a no wrapped table 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-heading-nowrap table-hover table-list table-nowrap"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a responsive table 1`] = `
<div>
  <div
    class="table-responsive table-responsive-sm"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a responsive table 2`] = `
<div>
  <div
    class="table-responsive table-responsive-sm"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table hover 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table striped 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Head 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with a Head and Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with an active row 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody>
        <tr
          class="table-active"
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with columns bordered 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-bordered table-hover table-list"
    >
      <thead />
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple Cells into Row 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody>
        <tr
          class=""
        >
          <td
            class=""
          >
            One
          </td>
          <td
            class=""
          >
            <button
              type="button"
            >
              Two
            </button>
          </td>
          <td
            class=""
          >
            Three
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple rows into Body 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody>
        <tr
          class=""
        />
        <tr
          class=""
        />
        <tr
          class=""
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders a table with multiple rows into Head 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <thead>
        <tr
          class=""
        />
        <tr
          class=""
        />
        <tr
          class=""
        />
      </thead>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders with a headingTitle 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody>
        <tr
          class="table-divider"
        >
          <td
            class=""
            colspan="8"
          >
            Recipes
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <p
              class="table-list-title"
            >
              Hamburger
            </p>
          </td>
          <td
            class=""
          />
          <td
            class=""
          >
            U.S.A
          </td>
          <td
            class="text-right"
          >
            10 min.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClayTable renders with non wrapped cells 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit show-quick-actions-on-hover table-hover table-list"
    >
      <tbody>
        <tr
          class="table-divider"
        >
          <td
            class=""
            colspan="8"
          >
            Recipes
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="table-cell-expand"
          >
            <p
              class="table-list-title"
            >
              Hamburger
            </p>
          </td>
          <td
            class=""
          />
          <td
            class="table-cell-ws-nowrap"
          >
            Originally from the U.S.A. but available anywhere around the world
          </td>
          <td
            class="text-right"
          >
            10 min.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
